{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 331,
  "lineage": "cd8fbb06-3337-a9f9-72e1-04ead47bbff2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "glasto_NI",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "EUWest1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "c0dpf5qjhrnulkjsl5shh4huud.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "westeurope",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_EUWest1"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "NorthEurope",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "aa0uvzc3n3uebjmzfbbz30db4g.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "northeurope",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_NorthEurope"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "lmxa3iontotujan33km2re2qyb.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "uksouth",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKSouth1"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "booeyyb3p4hujjqhzywnyyecpf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "uksouth",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKSouth2"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth3",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "i2hh2galcynurbdraqq4z1p2md.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "uksouth",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKSouth3"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth4",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "qaved30d0fxelf44g3dbyppfcf.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "uksouth",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKSouth4"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "sts0wbdtnoqufnef3e4v3r4iaa.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "ukwest",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKWest1"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "ia3nz3njgmvehcd00vttjif4zf.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "ukwest",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKWest2"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest3",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "jnmjh1o11aiunjd2r0qnxkoblf.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "ukwest",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKWest3"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest4",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/networkInterfaces/glasto_NI",
            "internal_domain_name_suffix": "l0hjmu2e1jhubpd4tpywymxpkd.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
                "subnet_id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET"
              }
            ],
            "location": "ukwest",
            "name": "glasto_NI",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "glasto_RG_UKWest4"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_IP",
            "azurerm_resource_group.glasto_RG",
            "azurerm_subnet.glasto_SNET",
            "azurerm_virtual_network.glasto_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "glasto_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "EUWest1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "westeurope",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_EUWest1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "NorthEurope",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "northeurope",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_NorthEurope",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "uksouth",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKSouth1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "uksouth",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKSouth2",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "uksouth",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKSouth3",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth4",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "uksouth",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKSouth4",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "ukwest",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKWest1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "ukwest",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKWest2",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "ukwest",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKWest3",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest4",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/networkSecurityGroups/glasto_SG",
            "location": "ukwest",
            "name": "glasto_SG",
            "resource_group_name": "glasto_RG_UKWest4",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_RDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "EUWest1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_EUWest1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "NorthEurope",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_NorthEurope",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKSouth1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKSouth2",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKSouth3",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth4",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKSouth4",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKWest1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKWest2",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKWest3",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest4",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/networkSecurityGroups/glasto_SG/securityRules/allow_RDP",
            "name": "allow_RDP",
            "network_security_group_name": "glasto_SG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "glasto_RG_UKWest4",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.glasto_SG",
            "azurerm_resource_group.glasto_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_public_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "EUWest1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_EUWest1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "NorthEurope",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_NorthEurope",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKSouth1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKSouth2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKSouth3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth4",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKSouth4",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKWest1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKWest2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKWest3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest4",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/publicIPAddresses/vm_public_IP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vm_public_IP",
            "resource_group_name": "glasto_RG_UKWest4",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "glasto_SNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "EUWest1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_EUWest1",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "NorthEurope",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_NorthEurope",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKSouth1",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKSouth2",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKSouth3",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKSouth4",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKSouth4",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKWest1",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKWest2",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKWest3",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        },
        {
          "index_key": "UKWest4",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/virtualNetworks/glasto_VNET/subnets/glasto_SNET",
            "name": "glasto_SNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "glasto_RG_UKWest4",
            "virtual_network_name": "glasto_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG",
            "azurerm_virtual_network.glasto_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "glasto_VNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "EUWest1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fef28616-3c09-455b-a932-5fe473f8f4a3",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_EUWest1/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "westeurope",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_EUWest1"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "NorthEurope",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e44a3500-6f5d-4068-a599-28439ee861f6",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_NorthEurope/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "northeurope",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_NorthEurope"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a10e2e5b-9bcd-44a7-81bd-ea99c89390c1",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth1/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "uksouth",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKSouth1"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth2",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "604c9c0b-7f3d-448f-a607-ce2cdc60827d",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth2/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "uksouth",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKSouth2"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth3",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "187e0e47-160b-481b-8471-0421ecedfc63",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth3/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "uksouth",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKSouth3"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKSouth4",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f7412a80-d143-456e-97de-37461c3de515",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKSouth4/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "uksouth",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKSouth4"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "04abe594-6b73-42a1-b485-e93d5ec7c800",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest1/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "ukwest",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKWest1"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest2",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f5dc3a40-33a9-432a-887a-d56734a0becd",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest2/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "ukwest",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKWest2"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest3",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ed93584b-d8db-4611-a47c-8ea0dba9c15d",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest3/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "ukwest",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKWest3"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        },
        {
          "index_key": "UKWest4",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "53968e5e-da84-404f-bc7e-9bf16c32ef53",
            "id": "/subscriptions/3ac00602-379c-46d6-afac-a59785a330b2/resourceGroups/glasto_RG_UKWest4/providers/Microsoft.Network/virtualNetworks/glasto_VNET",
            "location": "ukwest",
            "name": "glasto_VNET",
            "resource_group_name": "glasto_RG_UKWest4"
          },
          "dependencies": [
            "azurerm_resource_group.glasto_RG"
          ]
        }
      ]
    }
  ]
}